src/adapters/tui/widgets/snapshots/omakure__adapters__tui__widgets__history__tests__snapshot_render_history_empty.snap
---
source: src/adapters/tui/widgets/history.rs
assertion_line: 471
expression: terminal.backend()
---
"┌History─────────────────────────────────────────┐┌Output──────────────────────┐"
"│No executions yet.                              ││No history selected.        │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"└────────────────────────────────────────────────┘└────────────────────────────┘"
"Tab dashboards, Up/Down select, Enter view output, Esc back, Ctrl+/ nav         "
"                                                                                "
