src/adapters/tui/widgets/snapshots/omakure__adapters__tui__widgets__history__tests__snapshot_render_history_list.snap
---
source: src/adapters/tui/widgets/history.rs
assertion_line: 387
expression: terminal.backend()
---
"┌History─────────────────────────────────────────┐┌Output──────────────────────┐"
"│    State      │ S │ D │ Script     │ Actor     ││Script: deploy.sh           │"
"│    ────────── ┼ ─ ┼ ─ ┼ ────────── ┼ ────────  ││Args: -                     │"
"│  > completed  │ O │ 1 │ deploy.sh  │ human     ││Status: OK                  │"
"│    failed     │ O │ 1 │ setup.sh   │ human     ││Actor: human                │"
"│                                                ││Run id: rid-deploy.sh       │"
"│                                                ││                            │"
"│                                                ││STDOUT:                     │"
"│                                                ││ok                          │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"└────────────────────────────────────────────────┘└────────────────────────────┘"
"Tab dashboards, Up/Down select, Enter view output, Esc back, Ctrl+/ nav         "
"                                                                                "
